@@ -1,28 +1,28 @@
 .TH "AdvanceCOMP ZIP Compression Utility" 1
 .SH NAME
-advzip \(hy AdvanceCOMP ZIP Compression Utility
+advzip \- AdvanceCOMP ZIP Compression Utility
 .SH SYNOPSIS 
-advzip [\(hya, \(hy\(hyadd] [\(hyx, \(hy\(hyextract] [\(hyl, \(hy\(hylist]
+advzip [\-a, \-\-add] [\-x, \-\-extract] [\-l, \-\-list]
 .PD 0
 .PP
 .PD
-	[\(hyz, \(hy\(hyrecompress] [\(hyt, \(hy\(hytest] [\(hy0, \(hy\(hyshrink\(hystore]
+	[\-z, \-\-recompress] [\-t, \-\-test] [\-0, \-\-shrink\-store]
 .PD 0
 .PP
 .PD
-	[\(hy1, \(hy\(hyshrink\(hyfast] [\(hy2, \(hy\(hyshrink\(hynormal] [\(hy3, \(hy\(hyshrink\(hyextra]
+	[\-1, \-\-shrink\-fast] [\-2, \-\-shrink\-normal] [\-3, \-\-shrink\-extra]
 .PD 0
 .PP
 .PD
-	[\(hy4, \(hy\(hyshrink\(hyinsane] [\(hyi, \(hy\(hyiter N]
+	[\-4, \-\-shrink\-insane] [\-i, \-\-iter N]
 .PD 0
 .PP
 .PD
-	[\(hyN, \(hy\(hynot\(hyzip] [\(hyp, \(hy\(hypedantic] [\(hyq, \(hy\(hyquiet]
+	[\-N, \-\-not\-zip] [\-p, \-\-pedantic] [\-q, \-\-quiet]
 .PD 0
 .PP
 .PD
-	[\(hyh, \(hy\(hyhelp] [\(hyV, \(hy\(hyversion] ARCHIVES... [FILES...]
+	[\-h, \-\-help] [\-V, \-\-version] ARCHIVES... [FILES...]
 .PD 0
 .PP
 .PD
@@ -30,54 +30,54 @@ advzip [\(hya, \(hy\(hyadd] [\(hyx, \(hy\(hyextract] [\(hyl, \(hy\(hylist]
 The main purpose of this utility is to recompress and test
 the zip archives to get the smallest possible size.
 .PP
-For recompression the 7\(hyZip (www.7\(hyzip.com) Deflate
+For recompression the 7\-Zip (www.7\-zip.com) Deflate
 implementation is used. This implementation generally
-gives 5\(hy10% more compression than the zLib Deflate
+gives 5\-10% more compression than the zLib Deflate
 implementation.
 .PP
-For experimental purpose also the 7\(hyZip LZMA algorithm is
-available with the \(hyN option. In this case, the generated
+For experimental purpose also the 7\-Zip LZMA algorithm is
+available with the \-N option. In this case, the generated
 zips WILL NOT BE USABLE by any other program. To make
-them usable you need to recompress them without the \(hyN
-option. Generally this algorithm gives 10\(hy20% more
-compression than the 7\(hyZip Deflate implementation.
+them usable you need to recompress them without the \-N
+option. Generally this algorithm gives 10\-20% more
+compression than the 7\-Zip Deflate implementation.
 .SH OPTIONS 
 .TP
-.B \(hya, \(hy\(hyadd ARCHIVE FILES...
+.B \-a, \-\-add ARCHIVE FILES...
 Create the specified archive with the specified
 files. You must specify only one archive.
 .TP
-.B \(hyx, \(hy\(hyextract ARCHIVE
+.B \-x, \-\-extract ARCHIVE
 Extract all the files on the specified archive. You
 must specify only one archive.
 .TP
-.B \(hyl, \(hy\(hylist ARCHIVES...
+.B \-l, \-\-list ARCHIVES...
 List the content of the specified archives.
 .TP
-.B \(hyz, \(hy\(hyrecompress ARCHIVES...
-Recompress the specified archives. If the \(hy1, \(hy2,
-\(hy3 options are specified, it\(cqs used the smallest file
+.B \-z, \-\-recompress ARCHIVES...
+Recompress the specified archives. If the \-1, \-2,
+\-3 options are specified, it\(cqs used the smallest file
 choice from: the previous compressed data, the new
-compression and the uncompressed format. If the \(hy0
+compression and the uncompressed format. If the \-0
 option is specified the archive is always rewritten
 without any compression.
 .TP
-.B \(hyt, \(hy\(hytest ARCHIVES...
+.B \-t, \-\-test ARCHIVES...
 Test the specified archives. The tests may be
-extended with the \(hyp option.
+extended with the \-p option.
 .TP
-.B \(hyN, \(hy\(hynot\(hyzip
+.B \-N, \-\-not\-zip
 Use the LZMA algorithm when compressing. The
 generated zips will not be readable by any other
 application!
 .TP
-.B \(hyp, \(hy\(hypedantic
+.B \-p, \-\-pedantic
 Be pedantic on the zip tests. If this flag is
 enabled some more extensive tests on the zip
 integrity are done. These tests are generally not
 done by other zip utilities.
 .TP
-.B \(hy0, \(hy\(hyshrink\(hystore
+.B \-0, \-\-shrink\-store
 Disable the compression. The file is
 only stored and not compressed. This option is
 very useful to expand the archives of .png and .mp3
@@ -85,30 +85,30 @@ files. These files are already compressed, trying to
 compress them another time is really a waste of time
 and resource.
 .TP
-.B \(hy1, \(hy\(hyshrink\(hyfast
+.B \-1, \-\-shrink\-fast
 Set the compression level to \(a"fast\(a" using the zlib
 compressor.
 .TP
-.B \(hy2, \(hy\(hyshrink\(hynormal
+.B \-2, \-\-shrink\-normal
 Set the compression level to \(a"normal\(a" using the 7z
 compressor.
 This is the default level of compression.
 .TP
-.B \(hy3, \(hy\(hyshrink\(hyextra
+.B \-3, \-\-shrink\-extra
 Set the compression level to \(a"extra\(a" using the 7z
 compressor.
 You can define the compressor iterations with
-the \(hyi, \(hy\(hyiter option.
+the \-i, \-\-iter option.
 .TP
-.B \(hy4, \(hy\(hyshrink\(hyinsane
+.B \-4, \-\-shrink\-insane
 Set the compression level to \(a"insane\(a" using the zopfli
 compressor.
 You can define the compressor iterations with
-the \(hyi, \(hy\(hyiter option.
+the \-i, \-\-iter option.
 .TP
-.B \(hyi, \(hy\(hyiter N
+.B \-i, \-\-iter N
 Define an additional numer of iterations for the 7z and zopfli
-compressors for modes \(hy3 and \(hy4.
+compressors for modes \-3 and \-4.
 More iterations usually give a better compression, but may
 require a lot more time.
 Try for example with 10, 15, 20, and so on.
