@@ -1,6 +1,6 @@
 .TH "AdvanceCOMP Authors" 1
 .SH NAME
-authors \(hy AdvanceCOMP Authors
+authors \- AdvanceCOMP Authors
 .SH AUTHORS 
 The author of AdvanceCOMP and releated utilities is
 Andrea Mazzoleni.
