@@ -1,7 +1,8 @@
 Name
 	advcomp - History For AdvanceCOMP
 
-AdvanceCOMP Version 1.18 2013/04
+AdvanceCOMP Version 1.18 2013/11
+	) Added build support for new powerpc architectures.
 	) Fixed build with BZIP.
 
 AdvanceCOMP Version 1.17 2013/03
