@@ -5,9 +5,12 @@
 <body>
 <center><h2>History For AdvanceCOMP</h2></center>
 <h2> 
-AdvanceCOMP Version 1.18 2013/04
+AdvanceCOMP Version 1.18 2013/11
 </h2>
 <ul>
+<li>
+Added build support for new powerpc architectures.
+</li>
 <li>
 Fixed build with BZIP.
 </li>
