@@ -3,9 +3,10 @@
                             =======================
 
 
-ADVANCECOMP VERSION 1.18 2013/04
+ADVANCECOMP VERSION 1.18 2013/11
 ================================
 
+* Added build support for new powerpc architectures.
 * Fixed build with BZIP.
 
 
