@@ -1,6 +1,6 @@
 .TH "AdvanceCOMP Installation" 1
 .SH NAME
-advcomp \(hy AdvanceCOMP Installation
+advcomp \- AdvanceCOMP Installation
 .PP
 As root or user type:
 .PP
