@@ -3,43 +3,43 @@
 <title>AdvanceCOMP Installation</title>
 </head>
 <body>
-<h2><center>AdvanceCOMP Installation</center></h2>
+<center><h2>AdvanceCOMP Installation</h2></center>
 <p>
 As root or user type:
 <p>
 <table width="100%" border="0" cellspacing="0" cellpadding="2"><tr><td width="5%"></td><td width="95%">
-<font face="Courier">
-./configure<br>
-make<br>
-</font>
+<pre>
+./configure
+make
+</pre>
 </td></tr></table>
 <p>
 To check the generated executable type:
 <p>
 <table width="100%" border="0" cellspacing="0" cellpadding="2"><tr><td width="5%"></td><td width="95%">
-<font face="Courier">
-make check<br>
-</font>
+<pre>
+make check
+</pre>
 </td></tr></table>
 <p>
 and as root to install the programs and the documentation
 type:
 <p>
 <table width="100%" border="0" cellspacing="0" cellpadding="2"><tr><td width="5%"></td><td width="95%">
-<font face="Courier">
-make install<br>
-</font>
+<pre>
+make install
+</pre>
 </td></tr></table>
 <p>
 The documentation is in the man pages:
 <p>
 <table width="100%" border="0" cellspacing="0" cellpadding="2"><tr><td width="5%"></td><td width="95%">
-<font face="Courier">
-man advdef<br>
-man advzip<br>
-man advpng<br>
-man advmng<br>
-</font>
+<pre>
+man advdef
+man advzip
+man advpng
+man advmng
+</pre>
 </td></tr></table>
 </body>
 </html>
