@@ -1,6 +1,6 @@
 .TH "AdvanceCOMP Compression Utilities" 1
 .SH NAME
-advcomp \(hy AdvanceCOMP Compression Utilities
+advcomp \- AdvanceCOMP Compression Utilities
 .PP
 AdvanceCOMP contains recompression utilities for your .zip archives,
 .png images, .mng video clips and .gz files.
